# dumbrons

./: CMakeLists.txt  README.md  layer.cpp  layer.h  main.cpp  matrix.cpp  matrix.h  network.cpp  network.h  results.txt  roadmap.md  testmatrix.cpp
